crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-5.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-5 = """val\Ugggggggg"""
  |                            ^
invalid unicode 8-digit hex code
